--- a/modules/analytic_coog/locale/fr.po
+++ b/modules/analytic_coog/locale/fr.po
@@ -19,8 +19,7 @@ msgid ""
 "You cannot create a rule using analytic accounts with type 'Distribution over extra details':\n"
 "%(accounts)s"
 msgstr ""
-"Vous ne pouvez pas créer une règle utilisant des comptes analytiques de type"
-" 'Distribution à partir de dimensions métier' :\n"
+"Vous ne pouvez pas créer une règle utilisant des comptes analytiques de type 'Distribution à partir de dimensions métier' :\n"
 "%(accounts)s"
 
 msgctxt "field:analytic_account.account,pattern:"
