--- a/modules/claim/locale/fr.po
+++ b/modules/claim/locale/fr.po
@@ -182,7 +182,7 @@ msgstr "Données Complémentaires"
 
 msgctxt "field:benefit,extra_data_summary:"
 msgid "Offered Kind Summary"
-msgstr ""
+msgstr "Résumé des données complémentaires"
 
 msgctxt "field:benefit,id:"
 msgid "ID"
@@ -1252,8 +1252,8 @@ msgid ""
 "If set, a claim declared with this loss will hold the contracts of the "
 "covered person with this sub status."
 msgstr ""
-"Si défini, un sinistre déclaré avec ce préjudice suspendra le contrat de la"
-" personne couverte avec ce sous statut."
+"Si défini, un sinistre déclaré avec ce préjudice suspendra le contrat de la "
+"personne couverte avec ce sous statut."
 
 msgctxt "help:claim.loss,start_date:"
 msgid "Date of the event, or start date of a period"
