--- a/modules/claim_eligibility/locale/fr.po
+++ b/modules/claim_eligibility/locale/fr.po
@@ -315,6 +315,53 @@ msgctxt "model:ir.ui.menu,name:menu_benefit_eligibility_decision_form"
 msgid "Benefit Eligibility Decision"
 msgstr "Décision d'éligibilité"
 
+msgctxt "model:rule_engine,name:eligibite_prestation"
+msgid "Eligibilité prestation"
+msgstr "Eligibilité prestation"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:rule_parameter_2_data_delai_de_declaration_definition_eligibite_prestation"
+msgid ""
+"jour_apres_arret_travail:Nombre de jours après l'arrêt de travail\n"
+"mois_apres_arret_travail:Nombre de mois après l'arrêt de travail\n"
+"jour_apres_franchise:Nombre de jours après la franchise\n"
+"mois_apres_franchise:Nombre de mois après la franchise"
+msgstr ""
+"jour_apres_arret_travail:Nombre de jours après l'arrêt de travail\n"
+"mois_apres_arret_travail:Nombre de mois après l'arrêt de travail\n"
+"jour_apres_franchise:Nombre de jours après la franchise\n"
+"mois_apres_franchise:Nombre de mois après la franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:rule_parameter_4_periode_maximale_entre_un_precedent_arret_et_une_rechute_type_periodicite"
+msgid ""
+"jour:Jour\n"
+"            mois:Mois"
+msgstr ""
+"jour:Jour\n"
+"            mois:Mois"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:rule_paramater_1_data_delai_de_declaration_quantite_eligibite_prestation"
+msgid "Délai de déclaration"
+msgstr "Délai de déclaration"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:rule_parameter_2_data_delai_de_declaration_definition_eligibite_prestation"
+msgid "Délai de déclaration - definition"
+msgstr "Délai de déclaration - definition"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:rule_parameter_3_periode_maximale_entre_un_precedent_arret_et_une_rechute_quantite"
+msgid "Période maximale entre un précédent arrêt et une rechute"
+msgstr "Période maximale entre un précédent arrêt et une rechute"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:rule_parameter_4_periode_maximale_entre_un_precedent_arret_et_une_rechute_type_periodicite"
+msgid "Période maximale entre un précédent arrêt et une rechute - periodicité"
+msgstr ""
+"Période maximale entre un précédent arrêt et une rechute - periodicité"
+
 msgctxt "selection:benefit.eligibility.decision,state:"
 msgid "Accepted"
 msgstr "Accepté"
@@ -338,14 +385,6 @@ msgstr "Refusé"
 msgctxt "selection:claim.service,eligibility_status:"
 msgid "Study In Progress"
 msgstr "Etude en cours"
-
-msgctxt "selection:extra_data,kind:"
-msgid "Claim: Manual Eligibility Reason"
-msgstr "Sinistre: Motif de validation manuelle"
-
-msgctxt "selection:extra_data,kind:"
-msgid "Claim: Manual Rejection Reason"
-msgstr "Sinistre: Motif de refus manuel"
 
 msgctxt "view:benefit.eligibility.rule:"
 msgid "Benefit Eligibility Rule"
