--- a/modules/contract/locale/fr.po
+++ b/modules/contract/locale/fr.po
@@ -108,18 +108,17 @@ msgstr ""
 "l'adresse (%s) associée (%s)"
 
 msgctxt "error:contract:"
+msgid "Contract %(contracts)s must have a distributor, please enter it"
+msgstr ""
+"Le contrat %(contracts)s doit avoir un distributeur, veuillez le renseigner"
+
+msgctxt "error:contract:"
 msgid ""
 "Deletion not allowed because the contracts %(contracts)s are not quote or "
 "declined."
 msgstr ""
 "La suppresion n'est pas autorisée car les contrats %(contracts)s ne sont pas"
 " déclinés ou en cours de souscription"
-
-msgctxt "error:contract:"
-msgid ""
-"Contract %(contracts)s must have a distributor, please enter it"
-msgstr ""
-"Le contrat %(contracts)s doit avoir un distributeur, veuillez le renseigner"
 
 msgctxt "error:contract:"
 msgid "Invalid end date for last %s contact"
@@ -187,7 +186,8 @@ msgid ""
 "The party %(party)s can not be erased because its following terminated contracts have not exceeded their shelf life: \n"
 "%(contracts)s "
 msgstr ""
-"Le tiers %(party)s ne peut être supprimé car il est souscripteur sur les contracts résiliés n'ayant pas excédé leur durée de conservation : "
+"Le tiers %(party)s ne peut être supprimé car il est souscripteur sur les "
+"contracts résiliés n'ayant pas excédé leur durée de conservation : "
 "%(contracts)s "
 
 msgctxt "field:contract,activation_history:"
@@ -253,6 +253,10 @@ msgstr "Date de fin"
 msgctxt "field:contract,extra_data_values:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
+
+msgctxt "field:contract,extra_data_values_summary:"
+msgid "Extra Data Summary"
+msgstr "Résumé des données complémentaires"
 
 msgctxt "field:contract,extra_datas:"
 msgid "Extra Data"
@@ -774,6 +778,10 @@ msgctxt "field:contract.option,current_extra_data:"
 msgid "Current Extra Data"
 msgstr "Données complémentaires courantes"
 
+msgctxt "field:contract.option,current_extra_data_summary:"
+msgid "Current Extra Data Summary"
+msgstr "Résumé des données complémentaires courantes"
+
 msgctxt "field:contract.option,current_policy_owner:"
 msgid "Current Policy Owner"
 msgstr "Responsable Courant de la Police"
@@ -879,8 +887,8 @@ msgid "Extra Data"
 msgstr "Données Complémentaires"
 
 msgctxt "field:contract.option.version,extra_data_as_string:"
-msgid "Extra Data"
-msgstr "Données Complémentaires"
+msgid "Extra Data Summary"
+msgstr "Résumé des données complémentaires"
 
 msgctxt "field:contract.option.version,id:"
 msgid "ID"
