--- a/modules/contract_instalment_plan/locale/fr.po
+++ b/modules/contract_instalment_plan/locale/fr.po
@@ -19,11 +19,6 @@ msgstr ""
 "Le contrat et les dates de début et de fin des quittances sont des données "
 "requises."
 
-msgctxt "help:account.invoice.payment_term,based_on_instalment:"
-msgid "If checked, the terms will be calculated to match the entered instalment plan."
-msgstr ""
-"Les échéances seront calculées pour respecter l'échelonnement de paiement saisi."
-
 msgctxt "error:contract.instalment_plan:"
 msgid "Existing instalment(s) for this period: %(existing_instalment)s"
 msgstr ""
@@ -37,8 +32,8 @@ msgstr ""
 
 msgctxt "error:contract.instalment_plan:"
 msgid ""
-"Invoice period end %(end_date)s should be greater than invoices period start "
-"%(start_date)s."
+"Invoice period end %(end_date)s should be greater than invoices period start"
+" %(start_date)s."
 msgstr ""
 "La date de fin des quittances %(end_date)s devrait être postérieure à la "
 "date de début des quittances %(start_date)s"
@@ -124,8 +119,8 @@ msgid "Invoices Period Start"
 msgstr "Date de début des quittances"
 
 msgctxt "field:contract.instalment_plan,rec_name:"
-msgid "Name"
-msgstr "Nom"
+msgid "Record Name"
+msgstr "Nom de l'enregistrement"
 
 msgctxt "field:contract.instalment_plan,scheduled_payments:"
 msgid "Scheduled Payments"
@@ -188,8 +183,8 @@ msgid "Maturity Date"
 msgstr "Date d'échéance"
 
 msgctxt "field:contract.instalment_plan.payment,rec_name:"
-msgid "Name"
-msgstr "Nom"
+msgid "Record Name"
+msgstr "Nom de l'enregistrement"
 
 msgctxt "field:contract.instalment_plan.payment,write_date:"
 msgid "Write Date"
@@ -283,6 +278,14 @@ msgstr "Date de fin des quittances"
 msgctxt "field:contract.instalment_plan.select_period,invoice_period_start:"
 msgid "Invoices Period Start"
 msgstr "Date de début des quittances"
+
+msgctxt "help:account.invoice.payment_term,based_on_instalment:"
+msgid ""
+"If checked, the terms will be calculated to match the entered instalment "
+"plan."
+msgstr ""
+"Les échéances seront calculées pour respecter l'échelonnement de paiement "
+"saisi."
 
 msgctxt ""
 "model:account.invoice.payment_term,name:payment_term_based_on_instalment"
@@ -406,10 +409,6 @@ msgctxt "view:contract.instalment_plan.scheduled_payments:"
 msgid "Instalment Parameters"
 msgstr "Paramètres de l'échelonnement"
 
-msgctxt "view:contract.instalment_plan.scheduled_payments:"
-msgid "Scheduled Payments"
-msgstr "Echéances"
-
 msgctxt "view:contract.instalment_plan.select_period:"
 msgid "Scheduled Payments"
 msgstr "Echéances"
@@ -417,14 +416,6 @@ msgstr "Echéances"
 msgctxt "view:contract.instalment_plan:"
 msgid "Cancel"
 msgstr "Annuler"
-
-msgctxt "view:contract.instalment_plan:"
-msgid "Instalment Plan"
-msgstr "Echelonnement de paiements"
-
-msgctxt "view:contract.instalment_plan:"
-msgid "Instalment Plans"
-msgstr "Echelonnements de paiements"
 
 msgctxt "view:contract.instalment_plan:"
 msgid "Validate"
