--- a/modules/coog_core/locale/fr.po
+++ b/modules/coog_core/locale/fr.po
@@ -28,16 +28,16 @@ msgstr ""
 msgctxt "error:export_not_found:"
 msgid "Cannot import : no object %s with functionnal key : \"%s\" were found."
 msgstr ""
-"Impossible d'importer: aucun objet %s trouvé avec la clé fonctionnel: : "
-"\"%s\" "
+"Import impossible: aucun object %s n'a été trouvé pour la clé fonctionnelle:"
+" \"%s\" "
 
 msgctxt "error:export_not_unique:"
 msgid ""
 "Cannot import : the following objects:\\n%s\\n share the same functional "
 "key:\\n\"%s\"."
 msgstr ""
-"Impossible d'importer  : les objets suivants:\\n%s\\n ont la même clé "
-"fonctionnel :\\n\"%s\"."
+"Import impossible: les objets suivants:\\n%s\\n partagent la même clé "
+"fonctionnelle:\\n\"%s\"."
 
 msgctxt "error:extra_details.configuration:"
 msgid "The model must be unique!"
@@ -91,7 +91,7 @@ msgstr ""
 
 msgctxt "error:missing_export_configuration:"
 msgid "Can't find configuration for code %s."
-msgstr "Impossible de trouver la clé de configuration pour le code  %s."
+msgstr "Aucune configuration trouvée pour le code %s."
 
 msgctxt "field:async.task,create_date:"
 msgid "Create Date"
@@ -224,6 +224,10 @@ msgstr "Groupes"
 msgctxt "field:event.type,icon:"
 msgid "Icon"
 msgstr "Icône"
+
+msgctxt "field:event.type,icon_name:"
+msgid "Icon Name"
+msgstr "Nom de l'icône"
 
 msgctxt "field:event.type,id:"
 msgid "ID"
@@ -369,6 +373,10 @@ msgctxt "field:event.type.action-event.type,action:"
 msgid "Action"
 msgstr "Action"
 
+msgctxt "field:event.type.action-event.type,active:"
+msgid "Active"
+msgstr "Actif"
+
 msgctxt "field:event.type.action-event.type,create_date:"
 msgid "Create Date"
 msgstr "Date de Création"
@@ -384,10 +392,6 @@ msgstr "Créé par"
 msgctxt "field:event.type.action-event.type,event_type:"
 msgid "Event Type"
 msgstr "Type d'événement"
-
-msgctxt "field:event.type.action-event.type,active:"
-msgid "Active"
-msgstr "Active"
 
 msgctxt "field:event.type.action-event.type,id:"
 msgid "ID"
@@ -1404,8 +1408,10 @@ msgstr "Contexte JSON"
 msgctxt "help:event.type,groups:"
 msgid ""
 "If the user belongs to one of the groups linked to the event type, he can "
-"see it in the event log."
+"see it by default in the event log."
 msgstr ""
+"Si l'utilisateur appartient à l'un des groupes liés au type de l'évènement, "
+"il peut le voir par défaut dans les logs d'évènements."
 
 msgctxt "help:event.type.action,pyson_condition:"
 msgid ""
@@ -1480,7 +1486,7 @@ msgstr "Succès de tâche asynchrone"
 
 msgctxt "model:event.type-res.group,name:"
 msgid "Event Type Group Relation"
-msgstr ""
+msgstr "Relation groupe type d'évènement"
 
 msgctxt "model:event.type.action,name:"
 msgid "Event Type Action"
