--- a/modules/account_statement_cog/locale/fr.po
+++ b/modules/account_statement_cog/locale/fr.po
@@ -6,10 +6,6 @@ msgctxt "error:account.move:"
 msgid "The statement is already cancelled"
 msgstr "Le relevé est déja annulé"
 
-msgctxt "error:account.statement:"
-msgid "The name on statement must be unique"
-msgstr "Le nom sur relevé doit être unique"
-
 msgctxt "error:account.statement.create:"
 msgid "All selected records are not receivable"
 msgstr "Tous les enregistrements ne sont pas à recevoir"
@@ -62,6 +58,10 @@ msgstr ""
 msgctxt "error:account.statement:"
 msgid "No lines associated to the statement(s) %s"
 msgstr "Pas de lignes associées au(x) relevé(s) %s"
+
+msgctxt "error:account.statement:"
+msgid "The name on statement must be unique per company"
+msgstr "Le nom d'un relevé est unique par société."
 
 msgctxt "field:account.statement,color:"
 msgid "Color"
@@ -452,7 +452,3 @@ msgstr "Emis"
 msgctxt "selection:account.statement,state:account_statement."
 msgid "Posted"
 msgstr "Emis"
-
-msgctxt "view:account.statement:account_statement."
-msgid "Post"
-msgstr "Emettre"
