--- a/modules/claim_group_life_fr/locale/fr.po
+++ b/modules/claim_group_life_fr/locale/fr.po
@@ -71,9 +71,331 @@ msgctxt "model:claim.loss.hospitalisation.period,name:"
 msgid "HospitalisationPeriod"
 msgstr "Période d'hospitalisation"
 
+msgctxt ""
+"model:extra_data,string:date_d_effet_d_indemnisation_franchise_relais_conventation_defaut"
+msgid "Date d'effet d'indemnisation"
+msgstr "Date d'effet d'indemnisation"
+
 msgctxt "model:extra_data,string:ijss_extra_data"
 msgid "IJSS"
 msgstr "Indémnité journalière de la sécurité sociale"
+
+msgctxt ""
+"model:rule_engine,name:calcul_des_limitations_du_traitement_journalier"
+msgid "Calcul des limitations du traitement journalier"
+msgstr "Calcul des limitations du traitement journalier"
+
+msgctxt "model:rule_engine,name:calcul_des_periodes_d_indemnisation"
+msgid "Calcul des périodes d'indemnisation"
+msgstr "Calcul des périodes d'indemnisation"
+
+msgctxt ""
+"model:rule_engine,name:calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
+msgid "Calcul du traitement de base  journalier en fonction des tranches"
+msgstr "Calcul du traitement de base journalier en fonction des tranches"
+
+msgctxt "model:rule_engine,name:franchise_base_sur_un_nombre_de_jour_defaut"
+msgid "Inclusion du mi-temps thérapeutique"
+msgstr "Inclusion du mi-temps thérapeutique"
+
+msgctxt ""
+"model:rule_engine,name:franchise_fixe_toute_nature_d_arret_confondue_pour_un_arret_total_defaut"
+msgid "Franchise fixe toute nature d'arrêt confondue pour un arrêt total"
+msgstr "Franchise fixe toute nature d'arrêt confondue pour un arrêt total"
+
+msgctxt "model:rule_engine,name:franchise_relais_conventation_defaut"
+msgid "Franchise relais convention"
+msgstr "Franchise relais convention"
+
+msgctxt "model:rule_engine,name:franchise_toute_nature_arret_defaut"
+msgid "Franchise fixe toute nature d'arrêt confondue"
+msgstr "Franchise fixe toute nature d'arrêt confondue"
+
+msgctxt ""
+"model:rule_engine,name:regle_de_calcul_des_deductions_des_montants_percus"
+msgid "Règle de calcul des déductions des montants percus"
+msgstr "Règle de calcul des déductions des montants percus"
+
+msgctxt "model:rule_engine,name:traitement_journalier_par_tranche_de_salaire"
+msgid "Traitement journalier par tranche de salaire"
+msgstr "Traitement journalier par tranche de salaire"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:1_type_de_franchise_base_sur_un_nombre_de_jour_defaut"
+msgid ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+msgstr ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:1_type_de_franchise_fixe_toute_nature_d_arret_confondue_pour_un_arret_total_defaut"
+msgid ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+msgstr ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:1_type_de_franchise_toute_nature_arret_defaut"
+msgid ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+msgstr ""
+"continue:Continue\n"
+"cumulee_sur_365_jours:Cumulée sur les 365 jours précédant l'arrêt\n"
+"12_mois_glissants:Cumulée sur 12 mois glissants\n"
+"cumulee_sur_annee_civile:Cumulée sur l'année civile"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:4_traitement_de_reference_salaire_brut_net_par_tranche_de_salaire"
+msgid ""
+"salaire_brut:Salaire Brut\n"
+"salaire_net:Salaire Net\n"
+"salaire_brut_prime:Salaire Brut + Primes\n"
+"salaire_net_prime:Salaire Net + Primes"
+msgstr ""
+"salaire_brut:Salaire Brut\n"
+"salaire_net:Salaire Net\n"
+"salaire_brut_prime:Salaire Brut + Primes\n"
+"salaire_net_prime:Salaire Net + Primes"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:5_inclusion_du_mi_temps_salaire_brut_net_par_tranche_de_salaire"
+msgid ""
+"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+msgstr ""
+"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:inclusion_du_mi_temps_therapeutique_calcul_des_limitations_du_traitement_journalier"
+msgid ""
+"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+msgstr ""
+"ijb_ijss_mtt:IJ de base - IJSS - mi-temps\n"
+"min_ijb_2_tdrj_mtt: (Minimum entre l'IJ de base et 100 % du traitement de référence) - IJSS - mi-temps\n"
+"tdrj_ijss_mtt: 100% Traitement de référénce - IJSS - mi-temps"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:inclusion_du_mi_temps_therapeutique_regle_de_calcul_des_deductions_des_montants_percus"
+msgid "jb_ijss_mtt:IJ de base - IJSS - mi-temps"
+msgstr "jb_ijss_mtt:IJ de base - IJSS - mi-temps"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,selection:methode_de_traitement_de_reference_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
+msgid ""
+"salaire_brut:Salaire Brut\n"
+"salaire_net:Salaire Net\n"
+"salaire_brut_prime:Salaire Brut + Primes\n"
+"salaire_net_prime:Salaire Net + Primes"
+msgstr ""
+"salaire_brut:Salaire Brut\n"
+"salaire_net:Salaire Net\n"
+"salaire_brut_prime:Salaire Brut + Primes\n"
+"salaire_net_prime:Salaire Net + Primes"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:1_nombre_de_jours_de_franchise_franchise_relais_conventation_defaut"
+msgid "Nombre de jours de franchise minimum (optionnel)"
+msgstr "Nombre de jours de franchise minimum (optionnel)"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:1_pourcentage_ij_ta_salaire_brut_net_par_tranche_de_salaire"
+msgid "Pourcentage IJ TA"
+msgstr "Pourcentage IJ TA"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:1_type_de_franchise_base_sur_un_nombre_de_jour_defaut"
+msgid "Type de franchise"
+msgstr "Type de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:1_type_de_franchise_fixe_toute_nature_d_arret_confondue_pour_un_arret_total_defaut"
+msgid "Type de franchise"
+msgstr "Type de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:1_type_de_franchise_toute_nature_arret_defaut"
+msgid "Type de franchise"
+msgstr "Type de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:2_nombre_de_jours_de_franchise_base_sur_un_nombre_de_jour_default"
+msgid "Nombre de jours de franchise"
+msgstr "Nombre de jours de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:2_nombre_de_jours_de_franchise_fixe_toute_nature_d_arret_confondue_pour_un_arret_total_defaut"
+msgid "Nombre de jours de franchise"
+msgstr "Nombre de jours de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:2_nombre_de_jours_de_franchise_toute_nature_arret_default"
+msgid "Nombre de jours de franchise"
+msgstr "Nombre de jours de franchise"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:2_pourcentage_ij_tb_salaire_brut_net_par_tranche_de_salaire"
+msgid "Pourcentage IJ TB"
+msgstr "Pourcentage IJ TB"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:3_date_de_prejudice_base_sur_un_nombre_de_jour_default"
+msgid "Date de prejudice"
+msgstr "Date de prejudice"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:3_pourcentage_ij_tc_salaire_brut_net_par_tranche_de_salaire"
+msgid "Pourcentage IJ TC"
+msgstr "Pourcentage IJ TC"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:4_traitement_de_reference_salaire_brut_net_par_tranche_de_salaire"
+msgid "Traitement de référence"
+msgstr "Traitement de référence"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:5_inclusion_du_mi_temps_salaire_brut_net_par_tranche_de_salaire"
+msgid "Inclusion du mi-temps thérapeutique"
+msgstr "Inclusion du mi-temps thérapeutique"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:6_deduction_de_l_ijss_salaire_brut_net_par_tranche_de_salaire"
+msgid "Déduction de l'IJSS"
+msgstr "Déduction de l'IJSS"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:7_limiter_au_net_salaire_brut_net_par_tranche_de_salaire"
+msgid "Limiter au net"
+msgstr "Limiter au net"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:_pourcentage_ij_tc_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
+msgid "Pourcentage IJ TC"
+msgstr "Pourcentage IJ TC"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:deduction_de_l_ijss_calcul_des_limitations_du_traitement_journalier"
+msgid "Déduction de l'IJSS"
+msgstr "Déduction de l'IJSS"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:deduction_de_l_ijss_regle_de_calcul_des_deductions_des_montants_percus"
+msgid "Déduction de l'IJSS"
+msgstr "Déduction de l'IJSS"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:description_calcul_des_periodes_d_indemnisation"
+msgid "Description"
+msgstr "Description"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:ijss_calcul_des_limitations_du_traitement_journalier"
+msgid "IJSS"
+msgstr "Indémnité journalière de la sécurité sociale"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:ijss_calcul_des_periodes_d_indemnisation"
+msgid "IJSS"
+msgstr "Indémnité journalière de la sécurité sociale"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:ijss_regle_de_calcul_des_deductions_des_montants_percus"
+msgid "IJSS"
+msgstr "Indémnité journalière de la sécurité sociale"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:inclusion_du_mi_temps_therapeutique_calcul_des_limitations_du_traitement_journalier"
+msgid "Inclusion du mi-temps thérapeutique"
+msgstr "Inclusion du mi-temps thérapeutique"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:inclusion_du_mi_temps_therapeutique_regle_de_calcul_des_deductions_des_montants_percus"
+msgid "Inclusion du mi-temps thérapeutique"
+msgstr "Inclusion du mi-temps thérapeutique"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:limiter_au_net_calcul_des_limitations_du_traitement_journalier"
+msgid "Limiter au net"
+msgstr "Limiter au net"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:methode_de_traitement_de_reference_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
+msgid "Méthode de traitement de référence"
+msgstr "Méthode de traitement de référence"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:montant_du_mi_temps_therapeutique_calcul_des_limitations_du_traitement_journalier"
+msgid "Montant du mi-temps thérapeutique"
+msgstr "Montant du mi-temps thérapeutique"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:pourcentage_ij_ta_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
+msgid "Pourcentage IJ TA"
+msgstr "Pourcentage IJ TA"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:pourcentage_ij_tb_calcul_du_traitement_de_base_journalier_en_fonction_des_tranches"
+msgid "Pourcentage IJ TB"
+msgstr "Pourcentage IJ TB"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:traitement_de_base_journalier_regle_de_calcul_des_deductions_des_montants_percus"
+msgid "Traitement de base journalier"
+msgstr "Traitement de base journalier"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:traitement_de_reference_calcul_des_limitations_du_traitement_journalier"
+msgid "Traitement de référence"
+msgstr "Traitement de référence"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:traitement_de_reference_regle_de_calcul_des_deductions_des_montants_percus"
+msgid "Traitement de référence"
+msgstr "Traitement de référence"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:traitement_journalier_de_base_calcul_des_limitations_du_traitement_journalier"
+msgid "Traitement journalier de base"
+msgstr "Traitement journalier de base"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:traitement_journalier_de_base_calcul_des_periodes_d_indemnisation"
+msgid "Traitement journalier de base"
+msgstr "Traitement journalier de base"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:tranche_ta_ijss_calcul_des_limitations_du_traitement_journalier"
+msgid "Tranche TA"
+msgstr "Tranche TA"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:tranche_tb_calcul_des_periodes_d_indemnisation"
+msgid "Tranche TB"
+msgstr "Tranche TB"
+
+msgctxt ""
+"model:rule_engine.rule_parameter,string:tranche_tc_calcul_des_periodes_d_indemnisation"
+msgid "Tranche TC"
+msgstr "Tranche TC"
 
 msgctxt "selection:claim.indemnification.detail,kind:"
 msgid "Part Time"
