--- a/modules/claim_health/locale/fr.po
+++ b/modules/claim_health/locale/fr.po
@@ -10,6 +10,13 @@ msgctxt "error:benefit.act.family:"
 msgid "The code must be unique"
 msgstr "Le code doit être unique"
 
+msgctxt "error:endorsement.contract.subscriber_change:"
+msgid ""
+"The new subscriber must have a bank account in order to receive his benefits"
+msgstr ""
+"Le nouveau souscripteur doit avoir un compte banquaire afin de recevoir ses "
+"prestations"
+
 msgctxt "field:benefit.act.description,code:"
 msgid "Code"
 msgstr "Code"
@@ -201,6 +208,14 @@ msgstr "Avec option santé"
 msgctxt "field:contract.covered_element,possible_claim_bank_accounts:"
 msgid "Possible Claim Bank Account"
 msgstr "Comptes bancaires disponibles"
+
+msgctxt "field:contract.covered_element.modify,possible_claim_bank_owners:"
+msgid "Possible Claim Bank Accounts"
+msgstr "Comptes bancaires disponibles"
+
+msgctxt "field:contract.covered_element.modify.displayer,claim_bank_account:"
+msgid "Claim Bank Account"
+msgstr "Compte bancaire pour le virement des prestations"
 
 msgctxt "model:benefit.act.description,name:"
 msgid "Medical Act Description"
