--- a/modules/claim_indemnification/locale/fr.po
+++ b/modules/claim_indemnification/locale/fr.po
@@ -1877,6 +1877,38 @@ msgctxt "selection:claim.service,annuity_frequency:"
 msgid "Yearly"
 msgstr "Annuelle"
 
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Death"
+msgstr "Décès"
+
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Education Annuities"
+msgstr "Rente éducation"
+
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Funeral Capital"
+msgstr "Obsèques"
+
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Joint Annuities"
+msgstr "Rente conjoint"
+
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Partial Disability"
+msgstr "Invalidité partielle"
+
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Temporary Disability"
+msgstr "Incapacité de travail"
+
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Total And Irreversible Autonomy Loss"
+msgstr "Perte Totale et Irréversible d'Autonomie"
+
+msgctxt "selection:insurer.delegation,insurance_kind:"
+msgid "Total Disability"
+msgstr "Invalidité totale"
+
 msgctxt "selection:rule_engine,type_:"
 msgid "Benefit"
 msgstr "Prestation"
