--- a/modules/contract_term_renewal/locale/fr.po
+++ b/modules/contract_term_renewal/locale/fr.po
@@ -12,14 +12,6 @@ msgstr ""
 
 msgctxt "error:contract:"
 msgid ""
-"The contract %(contract)s has been renewed, the deferment will override "
-"the contract start date"
-msgstr ""
-"Le contrat %(contract)s à été renouvellé, le report va écraser la date "
-"de début du contrat"
-
-msgctxt "error:contract:"
-msgid ""
 "Contract %(contract_number)s has already been renewed, with new start date "
 "at %(start_date)s . Are you sure you want to prevent renewal after "
 "%(end_date)s ?"
@@ -27,6 +19,14 @@ msgstr ""
 "Le contrat %(contract_number)s a déjà été renouvellé, avec une nouvelle date"
 " d'effet au %(start_date)s . Êtes-vous sûr de vouloir décliner le "
 "renouvellement après le %(end_date)s ? "
+
+msgctxt "error:contract:"
+msgid ""
+"The contract %(contract)s has been renewed, the deferment will override the "
+"contract start date"
+msgstr ""
+"Le contrat %(contract)s à été renouvellé, le report va écraser la date de "
+"début du contrat"
 
 msgctxt "field:contract,is_renewable:"
 msgid "Is Renewable"
