--- a/modules/contract_distribution/doc/en/CHANGELOG
+++ b/modules/contract_distribution/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10126 Add migration for dist_network field
 * FEA#8932 Add the user's network distributors available in context
 * BUG#8938 Recalculate the authorized commercial products list following a change in the distributor selection in the contract subscription process
 * FEA#8845 Initialize commercial product during contract subscription process if there is only one authorized
