--- a/modules/contract_distribution/doc/fr/CHANGELOG
+++ b/modules/contract_distribution/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10126 Ajout de migration pour le champ dist_network
 * FEA#8932 La liste des distributeurs du réseau de l'utilisateur est disponible dans le contexte
 * BUG#8938 Recalculer la liste des produits commerciaux autorisés suite à un changement dans la sélection du distributeur dans le processus de souscription
 * FEA#8845 Initialisation du produit commercial durant le processus de souscription si il n'y en a qu'un seul d'autorisé
